# trashcan

./: .gitignore  Cargo.toml  README.md  arrays.tc  boolean.tc  example.tc
src/: ast.rs  codegen.rs  fold.rs  lib.rs  main.rs  parser.rs  symtab.rs  visit.rs
src/analysis/: mod.rs  resolve.rs  rewrite.rs  symtab.rs  transforms.rs  typecheck.rs
src/codegen/: bits.rs  expr.rs  item.rs  lit.rs  mod.rs  module.rs  stmt.rs  ty.rs
src/new_parser/: bits.rs  ident.rs  lit.rs  mod.rs  srcloc.rs
src/parser/: bits.rs  expr.rs  ident.rs  item.rs  lit.rs  mod.rs  module.rs  op.rs  srcloc.rs  stmt.rs
src/transform/: gensym.rs  mod.rs  renames.rs  rewrites.rs
